--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     docker:
       - image: microsoft/dotnet:2.2-sdks
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
       - checkout
       - run:
           name: Install dependencies
@@ -14,6 +16,6 @@ jobs:
 
 workflows:
   version: 2
-    build:
-      jobs:
+  build:
+    jobs:
       - build
