update circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
       - run:
           name: Build
           command: cd WebAppForDocker && docker build .
+      - run:
+          name: Run Tests
+          command: echo Tests running
 
 workflows:
   version: 2
